For changes in a particular version where the version number is unknown, the
version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 13.1

** C23 `auto`
Added support for `auto` as a deduced type in C23.

** `_BitInt(<int>)` help
`_BitInt(<int>)` was added to the help text.

** More English synonyms
The following English synonyms have been added:

                     char 8  char8_t
                    char 16  char16_t
                    char 32  char32_t
                 const-eval  consteval
        constant-evaluation  consteval
                 const-expr  constexpr
        constant-expression  constexpr
                 const-init  constinit
    constant-initialization  constinit
           double precision  double
             floating point  float
             wide character  wchar_t

** More english for user-defined conversions
User-defined conversions in pseudo-English now allow "const[ant] eval[uation]",
"const[ant] expr[ession]", and "const[ant] init[ialization]" for a storage
class.

** `_BitInt` maximum bits
Now check that the maximum number of bits for `_BitInt` is 64.

** `[[noreturn]]` in C23.
`[[noreturn]]` is now printed rather than `_Noreturn` in C23.

** Invalid destructor name error
Improved the error message for an invalid destructor name, e.g., `S::~T`.

** Removed `--interactive` & `-i` options
Removed these command-line options.  They've been in cdecl since the beginning,
but never seemed to have a justification.

** `exit` and `quit` command line arguments
Both the `exit` and `quit` commands when given as the first word of the first
argument on the command line are now correctly reported as an error.

** C23 `constexpr` help
Added missing `constexpr` to the help for C23.

** Missing C++ types man page
Added some missing C++23 types to the manual page.
